--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,4 @@
+/* Global*/
 *, *:before, *:after {
   margin: 0;
   padding: 0;
@@ -14,6 +15,8 @@
   --gray-2:#586069;
   --outer-space:rgb(43,49,55);
   --athens-gray:rgb(225, 228, 232);
+  --athens-gray-2:#FAFBFC;
+  --athens-gray-3:#e1e4e8 ;
   --pink:#ffc0cb;
   --red:#ff0000;
   --yellow:#ffff00;
@@ -53,6 +56,8 @@
   --aqua-haze:#f6f8fa;
   --pale-sky:#6A737D;
   --iron:#D1D5DA;
+  --chateau-green:#2ebc4f;
+  --eucalyptus:#28a745;
 }
 
 html {
@@ -61,10 +66,9 @@ html {
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
-  line-height: 2.4;
+  line-height: 1.5;
   color: var(--dark-blue);
   background-color: var(--white);
-  background-color: var(--outer-space);
 }
 
 ul {
@@ -72,6 +76,7 @@ ul {
 }
 
 a {
+  color: var(--science-blue);
   text-decoration: none;
   cursor: pointer;
 }
@@ -88,9 +93,16 @@ img {
   padding: 0 1.5rem;
 }
 
+section {
+  padding: 5rem 0;
+}
+
+/* End Global */
+/*Header */
 header {
   height: 7.2rem;
   padding: 0.8rem 0;
+  background-color: transparent;
 }
 
 nav {
@@ -106,6 +118,7 @@ nav {
 .nav-form {
   flex: 1 1 auto;
   display: flex;
+  align-items: center;
   justify-content: flex-end;
 }
 
@@ -127,6 +140,7 @@ nav {
   transition: 0.5s;
 }
 .nav-main-item:hover .nav-dropdown-menu {
+  visibility: visible;
   opacity: 1;
 }
 
@@ -140,6 +154,7 @@ nav {
 }
 
 .nav-dropdown-menu {
+  visibility: hidden;
   opacity: 0;
   transition: opacity 0.3s ease-in-out;
   background: var(--white);
@@ -275,6 +290,9 @@ nav {
   transition: opacity 0.4s;
   margin: 0 1.6rem;
 }
+.btn-login:hover {
+  opacity: 0.75;
+}
 
 .btn-register {
   color: var(--white);
@@ -283,9 +301,134 @@ nav {
   border: 1px solid var(--iron);
   padding: 0.4rem 0.8rem;
   transition: opacity 0.4s;
-  line-height: 0;
+}
+.btn-register:hover {
+  opacity: 0.75;
+}
+
+/* End Header */
+/* Hero*/
+.hero {
+  background-image: url("https://github.githubassets.com/images/modules/site/heroes/simple-codelines.svg");
+  background-position-x: center;
+  background-position-y: 10%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-color: var(--outer-space);
+  height: calc(100vh - 3.6rem);
+  width: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
+
+.hero-content {
+  display: flex;
+  width: 110rem;
+  max-width: 100%;
+  height: 100%;
+  margin: 1rem auto 0;
+}
+
+.hero-text-wrap {
+  flex-basis: 55%;
+  height: 100%;
   display: flex;
   align-items: center;
+  justify-content: center;
 }
+
+.hero-text {
+  width: 75%;
+}
+
+.hero-title {
+  color: var(--white);
+  font-size: 6.4rem;
+  font-weight: 500;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  display: block;
+  margin-bottom: 1rem;
+  line-height: 1;
+}
+
+.hero-description {
+  display: block;
+  font-size: 20px;
+  font-weight: 400;
+  color: rgba(255, 255, 255, 0.6);
+}
+.hero-description a {
+  color: var(--white);
+}
+
+.hero-form {
+  flex-basis: 40%;
+}
+
+.sign-up-form {
+  background-color: var(--athens-gray-2);
+  padding: 2rem;
+  border-radius: 0.6rem;
+  box-shadow: 0px 0px 1px 1px #1B1F23;
+}
+
+.form-group {
+  margin-bottom: 1.6rem;
+}
+.form-group label {
+  font-size: 1.4rem;
+  font-weight: 600;
+  color: var(--dark-blue);
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.form-group input {
+  border: 1px solid var(--athens-gray-3);
+  border-radius: 0.5rem;
+  background-color: transparent;
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 400;
+  color: var(--dark-blue);
+  outline: none;
+  box-shadow: inset 0 1px 0 rgba(225, 228, 232, 0.2);
+  padding: 1rem;
+  width: 100%;
+}
+.form-group input:focus {
+  border-color: var(--science-blue);
+  box-shadow: 0 0 0 3px rgba(3, 102, 214, 0.3);
+}
+
+.form-description {
+  font-size: 1.2rem;
+  color: var(--dark-blue);
+}
+
+.btn-sign-up {
+  margin: 1.6rem 0 3.2rem;
+  background-color: var(--chateau-green);
+  border-color: var(--chateau-green);
+  padding: 2rem 3.2rem;
+  border-radius: 0.6rem;
+  color: var(--white);
+  font-weight: 500;
+  font-size: 1.6rem;
+  display: block;
+  text-align: center;
+}
+.btn-sign-up:hover {
+  background-color: var(--eucalyptus);
+  border-color: var(--eucalyptus);
+}
+
+.footer-description {
+  color: var(--pale-sky);
+  font-size: 1.2rem;
+}
+
+/* End Hero*/
 
 /*# sourceMappingURL=main.css.map */
