--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,6 +11,7 @@
   --black:#000000;
   --blue:#0000ff;
   --science-blue:#0366D6;
+  --azure-radiance:#1074e7;
   --gray:#808080;
   --gray-2:#586069;
   --outer-space:rgb(43,49,55);
@@ -58,6 +59,7 @@
   --iron:#D1D5DA;
   --chateau-green:#2ebc4f;
   --eucalyptus:#28a745;
+  --bs-lg: 0 8px 24px rgba(149,157,165,.2);
 }
 
 html {
@@ -103,6 +105,10 @@ header {
   height: 7.2rem;
   padding: 0.8rem 0;
   background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 nav {
@@ -183,6 +189,10 @@ nav {
   font-weight: 600;
 }
 
+.nav-dropdown-item {
+  padding: 0.5rem 0;
+}
+
 .nav-dropdown-link {
   color: var(--gray-2);
   font-size: 1.4rem;
@@ -248,7 +258,6 @@ nav {
   height: inherit;
   z-index: 2;
   font-weight: 400;
-  display: flex;
   align-items: center;
   justify-content: space-between;
   display: none;
@@ -321,6 +330,9 @@ nav {
   left: 0;
   top: 0;
   z-index: -1;
+}
+.hero .container {
+  height: 100%;
 }
 
 .hero-content {
@@ -430,5 +442,84 @@ nav {
 }
 
 /* End Hero*/
+main {
+  margin-top: 100vh;
+}
+
+/* Github Enterprise */
+.enterprise-head-img {
+  position: absolute;
+  top: -16.5rem;
+  right: 0;
+  width: 45rem;
+}
+
+.enterprise-content {
+  background-color: var(--white);
+  border-radius: 0.6rem;
+  box-shadow: var(--bs-lg);
+  padding: 4.8rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 4rem;
+}
+
+.enterprise-title {
+  flex-basis: 40%;
+  padding-right: 12rem;
+}
+.enterprise-title h2 {
+  color: var(--dark-blue);
+  font-size: 3.2rem;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+  font-weight: 500;
+  margin-bottom: 1.6rem;
+  line-height: 4rem;
+}
+.enterprise-title p {
+  color: var(--gray-2);
+  font-size: 2rem;
+}
+
+.enterprise-item {
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.enterprise-item img {
+  width: 5rem;
+}
+.enterprise-item h3 {
+  margin-top: 1rem;
+  color: var(--dark-blue);
+  font-size: 1.6rem;
+  font-weight: 500;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+}
+.enterprise-item p {
+  color: var(--gray-2);
+  font-size: 1.4rem;
+}
+.enterprise-item .btn {
+  border-radius: 0.6rem;
+  transition: 0.2s;
+  padding: 1.6rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-top: 2.5rem;
+}
+
+.btn-free-trial {
+  background-color: var(--azure-radiance);
+  color: var(--white);
+}
+
+.btn-contact-sales {
+  border: 1px solid var(--azure-radiance);
+}
+
+/* End Github Enterprise */
 
 /*# sourceMappingURL=main.css.map */
