--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,7 @@
   --black:#000000;
   --blue:#0000ff;
   --science-blue:#0366D6;
+  --azure-radiance:#1074e7;
   --gray:#808080;
   --gray-2:#586069;
   --outer-space:rgb(43,49,55);
@@ -57,6 +58,7 @@
   --iron:#D1D5DA;
   --chateau-green:#2ebc4f;
   --eucalyptus:#28a745;
+  --bs-lg: 0 8px 24px rgba(149,157,165,.2);
 
 }
 html{
@@ -99,6 +101,10 @@ header{
   height: 7.2rem;
   padding:.8rem 0;
   background-color: transparent;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 nav{
   display: flex;
@@ -172,6 +178,7 @@ nav{
   }
 }
 .nav-dropdown-item{
+  padding: .5rem 0;
 }
 .nav-dropdown-link{
   color: var(--gray-2);
@@ -237,7 +244,6 @@ nav{
   height: inherit;
   z-index: 2;
   font-weight: 400;
-  display: flex;
   align-items: center;
   justify-content: space-between;
   .fa-search{
@@ -294,8 +300,6 @@ nav{
 /* End Header */
 
 
-
-
 /* Hero*/
 .hero{
   background-image: url("https://github.githubassets.com/images/modules/site/heroes/simple-codelines.svg");
@@ -310,6 +314,9 @@ nav{
   left: 0;
   top: 0;
   z-index: -1;
+  .container {
+    height: 100%;
+  }
 }
 .hero-content{
   display: flex;
@@ -317,7 +324,6 @@ nav{
   max-width: 100%;
   height: 100%;
   margin: 1rem auto 0;
-
 }
 .hero-text-wrap{
   flex-basis: 55%;
@@ -410,3 +416,80 @@ nav{
   font-size: 1.2rem;
 }
 /* End Hero*/
+
+main{
+  margin-top:100vh;
+}
+
+/* Github Enterprise */
+.github-enterpise{
+}
+.enterprise-head-img{
+  position: absolute;
+  top: -16.5rem;
+  right: 0;
+  width: 45rem;
+}
+.enterprise-content{
+  background-color: var(--white);
+  border-radius: .6rem;
+  box-shadow: var(--bs-lg);
+  padding: 4.8rem;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 4rem;
+}
+
+.enterprise-title{
+  flex-basis: 40%;
+  padding-right: 12rem;
+  h2{
+    color: var(--dark-blue);
+    font-size: 3.2rem;
+    font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+    font-weight: 500;
+    margin-bottom: 1.6rem;
+    line-height: 4rem;
+  }
+  p{
+    color: var(--gray-2);
+    font-size: 2rem;
+  }
+}
+.enterprise-item{
+  flex-basis: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  img{
+    width: 5rem;
+  }
+  h3{
+    margin-top: 1rem;
+    color: var(--dark-blue);
+    font-size: 1.6rem;
+    font-weight: 500;
+    font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+  }
+  p{
+    color: var(--gray-2);
+    font-size: 1.4rem;
+  }
+  .btn{
+    border-radius: .6rem;
+    transition: .2s;
+    padding: 1.6rem 2.4rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-top: 2.5rem;
+  }
+}
+.btn-free-trial{
+  background-color: var(--azure-radiance);
+  color: var(--white);
+}
+.btn-contact-sales{
+  border:1px solid var(--azure-radiance)
+}
+/* End Github Enterprise */
