--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -94,6 +94,9 @@ img{
 section {
   padding: 5rem 0;
 }
+.ff-inter{
+  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
+}
 /* End Global */
 
 
@@ -344,7 +347,6 @@ nav{
   color: var(--white);
   font-size: 6.4rem;
   font-weight: 500;
-  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   display: block;
   margin-bottom: 1rem;
   line-height: 1;
@@ -452,7 +454,6 @@ main{
   h2{
     color: var(--dark-blue);
     font-size: 3.2rem;
-    font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
     font-weight: 500;
     margin-bottom: 1.6rem;
     line-height: 4rem;
@@ -475,7 +476,6 @@ main{
     color: var(--dark-blue);
     font-size: 1.6rem;
     font-weight: 500;
-    font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   }
   p{
     color: var(--gray-2);
@@ -564,11 +564,41 @@ background-color: var(--congress-blue);
   border-radius: .6rem;
   padding: 1.6rem 2.4rem;
   font-size: 1.6rem;
-  font-family: Inter,-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol;
   font-weight: 500;
   text-align: center;
   width: 60%;
 }
 /* End Github For Team */
 
+
+/*  Organizations */
+.organizations-content{
+  display: flex;
+  flex-direction: column;
+}
+.organizations-title{
+  text-align: center;
+  color: var(--pale-sky);
+  font-size: 2rem;
+  font-weight: 400;
+  margin-bottom: 2rem;
+}
+.organizations-list{
+  max-width: 100rem;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.organization-item{
+  padding: 2rem 4rem;
+  display: flex;
+}
+.organization-logo{
+  max-height: 2.5rem;
+  width: initial;
+  color: var(--dark-blue);
+  filter: grayscale(100%);
+}
+/* End Organizations */
 
