--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,28 @@ section {
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
+.btn-outline-blue {
+  border-radius: 0.6rem;
+  transition: 0.2s;
+  padding: 1.6rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 500;
+  margin-top: 2.5rem;
+  border: 1px solid rgba(16, 116, 231, 0.5);
+}
+.btn-outline-blue:hover .fa-long-arrow-alt-right {
+  padding-left: 0.5rem;
+}
+.btn-outline-blue i {
+  font-size: 0.9rem;
+  width: 2rem;
+  transition: all 0.3s ease-in-out;
+}
+.btn-outline-blue:hover {
+  color: var(--science-blue);
+  border-color: var(--azure-radiance);
+}
+
 /* End Global */
 /*Header */
 header {
@@ -521,9 +543,9 @@ main {
   background-color: var(--azure-radiance);
   color: var(--white);
 }
-
-.btn-contact-sales {
-  border: 1px solid var(--azure-radiance);
+.btn-free-trial:hover {
+  background-color: var(--science-blue);
+  border-color: var(--science-blue);
 }
 
 /* End Github Enterprise */
@@ -636,5 +658,35 @@ main {
 }
 
 /* End Organizations */
+/* Github Team Signup */
+.teams-content {
+  max-width: 80rem;
+  padding: 0 2rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+.teams-content .sm-description {
+  color: var(--gray-2);
+  font-size: 1.6rem;
+}
+.teams-content .title {
+  color: var(--dark-blue);
+  font-size: 4.8rem;
+  font-weight: 500;
+}
+.teams-content .description {
+  color: var(--gray-2);
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.btn-teams-sign-up {
+  font-size: 1.6rem;
+  display: inline-block;
+}
+
+/* End Github Team Signup */
 
 /*# sourceMappingURL=main.css.map */
