--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -658,3 +658,74 @@ font-size: 1.6rem;
   display: inline-block;
 }
 /* End Github Team Signup */
+
+
+
+/* Features */
+.features-content{
+  display: flex;
+}
+.features-head-img{
+  flex:10;
+  padding-right: 5rem;
+  position: relative;
+}
+.features-list{
+  flex:7;
+}
+.features-item-img{
+  position: absolute;
+  top: 0;
+  right:10%;
+  width: 25%;
+  img{
+    display: none;
+  }
+  .active{
+    display: block;
+  }
+}
+
+.features-item{
+  padding: 2.4rem;
+  border-radius: .6rem;
+  display: flex;
+  align-items: center;
+  transition: all .3s;
+  border: 1px solid transparent;
+  cursor: pointer;
+  &:hover{
+    border-color: var(--iron);
+    box-shadow:var(--bs-lg);
+    .arrow-right-icon{
+      filter: initial;
+    }
+  }
+  .arrow-right-icon{
+    margin-left: 5.5rem;
+    font-size: 1.4rem;
+    filter: grayscale(100%);
+    transition: filter .3s;
+    color: var(--science-blue);
+  }
+
+}
+.features-item-title{
+  font-size: 2rem;
+  font-weight: 400;
+  color: var(--dark-blue);
+  margin-bottom: .5rem;
+}
+.features-item-description{
+  color: var(--dark-blue);
+  font-size: 1.4rem;
+  a{
+    padding-bottom: .01rem;
+    border-bottom: 1px solid rgba(16,116,231,.5);
+    transition: all .3s;
+    &:hover{
+      border-bottom: 1px solid var(--science-blue);
+    }
+  }
+}
+/* End Features */
