--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,6 +105,10 @@ section {
   font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
 
+.ff-mono {
+  font-family: SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace !important;
+}
+
 .btn-outline-blue {
   border-radius: 0.6rem;
   transition: 0.2s;
@@ -667,16 +671,19 @@ main {
   flex-direction: column;
   text-align: center;
 }
-.teams-content .sm-description {
+
+.section-sm-description {
   color: var(--gray-2);
   font-size: 1.6rem;
 }
-.teams-content .title {
+
+.section-title {
   color: var(--dark-blue);
   font-size: 4.8rem;
   font-weight: 500;
 }
-.teams-content .description {
+
+.section-description {
   color: var(--gray-2);
   font-size: 2rem;
   font-weight: 400;
@@ -850,5 +857,133 @@ main {
 }
 
 /* End Leading Companies */
+/*  Administration */
+.administration {
+  padding-top: 10rem;
+}
+
+.administration-content {
+  text-align: center;
+  max-width: 100rem;
+  margin: 0 auto;
+}
+
+.administration-header {
+  max-width: 80rem;
+  margin: 0 auto;
+}
+
+.administration-body {
+  margin: 4rem 0;
+  display: flex;
+  align-items: center;
+}
+
+.administration-item {
+  padding: 2rem 5rem;
+  text-align: left;
+}
+
+.administration-title {
+  color: var(--dark-blue);
+  font-size: 2rem;
+  font-weight: 400;
+}
+
+.administration-desc {
+  margin-top: 0.5rem;
+  color: var(--gray-2);
+  font-size: 1.4rem;
+}
+
+.administration-card {
+  background-color: var(--white);
+  border-radius: 0.6rem;
+  border: 1px solid var(--athens-gray-3);
+  padding: 2.5rem 2rem;
+  display: flex;
+  max-width: 55rem;
+  margin: 0 auto;
+  position: relative;
+}
+.administration-card:hover {
+  box-shadow: var(--bs-lg);
+}
+.administration-card:hover:before {
+  opacity: 1;
+  transform: translate3d(-1.5rem, -1.5rem, 0);
+}
+.administration-card:hover:after {
+  opacity: 1;
+  transform: translate3d(2rem, 2rem, 0);
+}
+.administration-card:before {
+  position: absolute;
+  content: "";
+  background: url("https://github.githubassets.com/images/modules/site/patterns/dots-small.svg");
+  width: 18rem;
+  height: 18rem;
+  transition: opacity 0.4s, transform 0.4s;
+  opacity: 0;
+  z-index: -1;
+  top: 0;
+  left: 0;
+}
+.administration-card:after {
+  position: absolute;
+  content: "";
+  background: url("https://github.githubassets.com/images/modules/site/patterns/dots-small.svg");
+  width: 18rem;
+  height: 18rem;
+  transition: opacity 0.4s, transform 0.4s;
+  opacity: 0;
+  z-index: -1;
+  bottom: 0;
+  right: 0;
+}
+
+.administration-card-icon {
+  flex: 0 0 9rem;
+}
+.administration-card-icon i {
+  font-size: 4.5rem;
+  color: var(--gray-2);
+}
+
+.administration-card-desc {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+.administration-card-desc h3 {
+  color: var(--dark-blue);
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-top: -0.25rem;
+}
+.administration-card-desc p {
+  color: var(--gray-2);
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+.administration-card-desc a {
+  font-size: 1.6rem;
+  display: flex;
+  align-items: center;
+}
+.administration-card-desc a .fa-long-arrow-alt-right {
+  font-size: 0.9rem;
+  width: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+.administration-card-desc a:hover .fa-long-arrow-alt-right {
+  padding-left: 0.5rem;
+}
+.administration-card-desc a i {
+  margin-left: 0.5rem;
+  font-size: 0.9rem;
+}
+
+/* End Administration */
 
 /*# sourceMappingURL=main.css.map */
