--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,5 @@
+/* Mixins */
+/* End Mixins */
 /* Global*/
 *, *:before, *:after {
   margin: 0;
@@ -25,17 +27,18 @@
   --endeavour:#0065a9;
   --lochmara:#007acc;
   --egg-blue:#00cfc8;
-  --Daintree: #022531;
+  --daintree: #022531;
   --sapphire:#040d21;
   --british-racing-green:#041027;
   --black-pearl:#051127;
   --cinder:#1e2327;
   --dodger-blue:#1f9cf0;
   --shark:#23292f;
+  --shark-2:#1b1f23;
   --mine-shaft:#303030;
-  --Emerald:#34d058;
-  --Chambray:#364e98;
-  --Fiord:#424d65;
+  --emerald:#34d058;
+  --chambray:#364e98;
+  --fiord:#424d65;
   --river-bed:#465061;
   --grape:#4a154b;
   --fern:#5fb57d;
@@ -131,6 +134,30 @@ section {
   border-color: var(--azure-radiance);
 }
 
+.section-head {
+  max-width: 70rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.sm-description {
+  color: var(--gray-2);
+  font-size: 1.6rem;
+  font-weight: 400;
+}
+
+.section-title {
+  color: var(--dark-blue);
+  font-size: 4.8rem;
+  font-weight: 500;
+}
+
+.section-description {
+  color: var(--gray-2);
+  font-size: 2rem;
+  font-weight: 400;
+}
+
 /* End Global */
 /*Header */
 header {
@@ -205,7 +232,7 @@ nav {
   width: 30rem;
   border-radius: 0.6rem;
   padding: 2rem 2.5rem;
-  box-shadow: 0px 0px 1px 1px #1B1F23;
+  box-shadow: 0px 0px 1px 1px var(--shark-2);
 }
 
 .dropdown-body {
@@ -417,7 +444,7 @@ nav {
   background-color: var(--athens-gray-2);
   padding: 2rem;
   border-radius: 0.6rem;
-  box-shadow: 0px 0px 1px 1px #1B1F23;
+  box-shadow: 0px 0px 1px 1px var(--shark-2);
 }
 
 .form-group {
@@ -664,29 +691,9 @@ main {
 /* End Organizations */
 /* Github Team Signup */
 .teams-content {
-  max-width: 80rem;
   padding: 0 2rem;
-  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  text-align: center;
-}
-
-.section-sm-description {
-  color: var(--gray-2);
-  font-size: 1.6rem;
-}
-
-.section-title {
-  color: var(--dark-blue);
-  font-size: 4.8rem;
-  font-weight: 500;
-}
-
-.section-description {
-  color: var(--gray-2);
-  font-size: 2rem;
-  font-weight: 400;
 }
 
 .btn-teams-sign-up {
@@ -863,13 +870,7 @@ main {
 }
 
 .administration-content {
-  text-align: center;
   max-width: 100rem;
-  margin: 0 auto;
-}
-
-.administration-header {
-  max-width: 80rem;
   margin: 0 auto;
 }
 
@@ -981,9 +982,131 @@ main {
 }
 .administration-card-desc a i {
   margin-left: 0.5rem;
-  font-size: 0.9rem;
 }
 
 /* End Administration */
+/* Integrations */
+.integrations {
+  padding: 10rem 0;
+}
+
+.integrations-content {
+  text-align: center;
+}
+
+.integration-body {
+  margin: 5rem auto 10rem;
+  max-width: 85rem;
+}
+
+.integration-list {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  grid-gap: 2.5rem;
+}
+
+.integration-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 9.6rem;
+  height: 9.6rem;
+  padding: 2rem;
+  border-radius: 50%;
+  position: relative;
+  transition: box-shadow 0.12s ease-in;
+}
+.integration-item:hover {
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2);
+}
+.integration-item:hover:before {
+  opacity: 1;
+}
+.integration-item:hover:after {
+  opacity: 1;
+}
+.integration-item:before {
+  position: absolute;
+  content: "";
+  top: calc(100% + .4rem);
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  transition: opacity 0.1s;
+  background-color: var(--shark-2);
+  width: 1rem;
+  height: 1rem;
+  opacity: 0;
+}
+.integration-item:after {
+  position: absolute;
+  content: attr(aria-label);
+  top: calc(100% + .8rem);
+  left: 50%;
+  transform: translateX(-50%);
+  transition: opacity 0.1s;
+  color: var(--white);
+  font-size: 1.1rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--shark-2);
+  border-radius: 0.6rem;
+  white-space: nowrap;
+  opacity: 0;
+}
+.integration-item:nth-child(even) {
+  margin-top: 5rem;
+}
+
+.slack {
+  background-color: var(--grape);
+}
+
+.zenhub {
+  background-color: var(--chambray);
+}
+
+.travis-ci {
+  background-color: var(--black-squeeze);
+}
+
+.atom {
+  background-color: var(--fern);
+}
+
+.circle-ci {
+  background-color: var(--daintree);
+}
+
+.google {
+  background-color: var(--concrete);
+}
+
+.code-climate {
+  background-color: var(--mine-shaft);
+}
+
+.integration-footer {
+  text-align: center;
+}
+.integration-footer p {
+  max-width: 30rem;
+  margin: 0 auto 1rem;
+  color: var(--gray-2);
+  font-size: 1.4rem;
+  display: block;
+}
+.integration-footer a {
+  font-size: 1.6rem;
+}
+.integration-footer a .fa-long-arrow-alt-right {
+  font-size: 0.9rem;
+  width: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+.integration-footer a:hover .fa-long-arrow-alt-right {
+  padding-left: 0.5rem;
+}
+
+/* End Integrations */
 
 /*# sourceMappingURL=main.css.map */
