--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -159,6 +159,75 @@ section {
   font-size: 2rem;
   font-weight: 400;
 }
+.cards{
+  display: flex;
+  flex-wrap: wrap;
+  grid-gap: 2.5rem;
+  justify-content: center;
+}
+.card{
+  flex-basis: 22.5%;
+  min-width: 25rem;
+  background-color: var(--white);
+  box-shadow: 0 2px 4px rgba(27,31,35,.15);
+  border-radius: .6rem;
+  padding: 1.6rem;
+  @include arrowAnimation();
+  &:hover{
+    .card-link-effect{
+      opacity: 1;
+      transform: translate3d(.5rem,-.5rem,0) scale(.95);
+    }
+  }
+}
+.card-header{
+  position: relative;
+  max-height: 20rem;
+  overflow: hidden;
+  img{
+    border-radius: .6rem;
+  }
+}
+.card-link-effect{
+  position: absolute;
+  top: 1.5rem;
+  right:1.5rem ;
+  background-color: var(--azure-radiance);
+  border-radius: .6rem;
+  padding:1rem 2rem;
+  transition: opacity .4s,transform .4s;
+  opacity: 0;
+}
+.square{
+  border:2px solid var(--dark-blue);
+  padding:.45rem .9rem;
+  i{
+    font-size: 1.2rem;
+    transform: rotate(45deg);
+    color: var(--white);
+  }
+}
+.card-body{
+  margin:1rem 0 1.5rem;
+  h1{
+    font-size: 1.6rem;
+    font-weight: 500;
+    color: var(--dark-blue);
+  }
+  p{
+    color: var(--gray-2);
+    font-size: 1.2rem;
+  }
+}
+.card-footer{
+  border-top: 1px solid var(--athens-gray-3);
+  padding-top: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: var(--azure-radiance);
+  font-size: 1.4rem;
+}
 /* End Global */
 
 
@@ -763,74 +832,6 @@ font-size: 1.6rem;
     margin-bottom: 1.5rem;
   }
 }
-.companines{
-  display: flex;
-  flex-wrap: wrap;
-  grid-gap: 2.5rem;
-  justify-content: center;
-}
-.companies-item{
-  flex-basis: 22.5%;
-  min-width: 25rem;
-  background-color: var(--white);
-  box-shadow: 0 2px 4px rgba(27,31,35,.15);
-  border-radius: .6rem;
-  padding: 1.6rem;
-  @include arrowAnimation();
-  &:hover{
-    .company-link-effect{
-      opacity: 1;
-      transform: translate3d(.5rem,-.5rem,0) scale(.95);
-    }
-  }
-}
-.company-header{
-  position: relative;
-  img{
-    border-radius: .6rem;
-  }
-}
-.company-link-effect{
-  position: absolute;
-  top: 1.5rem;
-  right:1.5rem ;
-  background-color: var(--azure-radiance);
-  border-radius: .6rem;
-  padding:1rem 2rem;
-  transition: opacity .4s,transform .4s;
-  opacity: 0;
-}
-.square{
-  border:2px solid var(--dark-blue);
-  padding:.45rem .9rem;
-  i{
-    font-size: 1.2rem;
-    transform: rotate(45deg);
-    color: var(--white);
-  }
-}
-.company-body{
-  margin:1rem 0 1.5rem;
-  h1{
-    font-size: 1.6rem;
-    font-weight: 500;
-    color: var(--dark-blue);
-  }
-  span{
-    color: var(--gray-2);
-    font-size: 1.2rem;
-  }
-}
-.company-footer{
-  border-top: 1px solid var(--athens-gray-3);
-  padding-top: 1.5rem;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  color: var(--azure-radiance);
-  font-size: 1.4rem;
-
-}
 /* End Leading Companies */
 
 
@@ -1036,3 +1037,15 @@ font-size: 1.6rem;
 
 }
 /* End Integrations */
+
+
+.community-body{
+  margin: 2.5rem 0;
+}
+.community-footer{
+  text-align: center;
+  .section-description{
+    max-width: 70rem;
+    margin: 0 auto;
+  }
+}
