--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1219,5 +1219,44 @@ main {
 }
 
 /* End Community */
+/* Signup  */
+.signup {
+  background-color: var(--dark-blue);
+}
+.signup .footer-description {
+  text-align: center;
+}
+.signup .footer-description a {
+  color: var(--white);
+}
+
+.signup-title {
+  color: var(--white);
+  font-size: 3.2rem;
+  font-weight: 400;
+  max-width: 90rem;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.signup-form {
+  margin: 8rem 0 2rem;
+  display: flex;
+  grid-gap: 3rem;
+}
+.signup-form > * {
+  flex: 1;
+}
+.signup-form label {
+  color: var(--white);
+}
+.signup-form input {
+  background-color: var(--white);
+}
+.signup-form input::placeholder {
+  color: inherit;
+}
+
+/* End Signup  */
 
 /*# sourceMappingURL=main.css.map */
