--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1222,6 +1222,7 @@ main {
 /* Signup  */
 .signup {
   background-color: var(--dark-blue);
+  padding: 10rem 0;
 }
 .signup .footer-description {
   text-align: center;
@@ -1258,5 +1259,90 @@ main {
 }
 
 /* End Signup  */
+/* Footer  */
+.footer {
+  padding: 5rem 0 0;
+}
+
+.footer-body {
+  display: flex;
+  justify-content: space-between;
+  grid-row-gap: 3rem;
+  flex-wrap: wrap;
+}
+
+.footer-logo {
+  flex-basis: 30%;
+}
+
+.footer-nav {
+  flex: 1 1 auto;
+  display: flex;
+  grid-row-gap: 5rem;
+  flex-wrap: wrap;
+}
+
+.footer-col {
+  flex: 1 0 auto;
+  padding-right: 5rem;
+}
+.footer-col .title {
+  color: var(--pale-sky);
+  font-weight: 400;
+  font-size: 1.4rem;
+  margin-bottom: 1rem;
+}
+
+.footer-nav-item {
+  padding: 0.5rem 0;
+}
+
+.footer-link {
+  font-size: 1.4rem;
+  color: var(--gray-2);
+}
+.footer-link:hover {
+  text-decoration: underline;
+  color: var(--science-blue);
+}
+
+.footer-bottom {
+  margin-top: 8rem;
+  background-color: var(--athens-gray-2);
+  padding: 2.4rem 0;
+}
+.footer-bottom .container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.another-links {
+  flex: 9 0 auto;
+  display: flex;
+  grid-gap: 1.5rem;
+  font-size: 1.2rem;
+  color: var(--gray-2);
+}
+.another-links a {
+  color: var(--gray-2);
+}
+.another-links a:hover {
+  text-decoration: underline;
+  color: var(--science-blue);
+}
+
+.social-media {
+  flex: 1 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  grid-gap: 1.5rem;
+}
+.social-media i {
+  font-size: 2rem;
+  color: var(--regent-gray);
+}
+
+/* End Footer  */
 
 /*# sourceMappingURL=main.css.map */
